004-docker-registy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: container-registry
