006-kyverno-ui.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno-system
