010-defectdojo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: defectdojo
