002-cert-manager-issuer.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-custom-setup
  namespace: ingress-system
  labels:
    k8s-app: node-custom-setup
spec:
  selector:
    matchLabels:
      k8s-app: node-custom-setup
  template:
    metadata:
      labels:
        k8s-app: node-custom-setup
    spec:
      hostPID: true
      hostNetwork: true
      containers:
      - name: wait
        image: k8s.gcr.io/pause:3.1
