003-traefik-dashboard-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
  name: traefik-dashboard
  namespace: kube-system
spec:
  tls:
  - hosts:
      - traefik.rancherdashboard.intra
    secretName: tls-docker-registry-ui-cert
  rules:
  - host: traefik.rancherdashboard.intra
    http:
      paths:
      - backend:
          service:
            name: traefik-dashboard
            port:
              number: 9000
        path: /
        pathType: Prefix
